@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
+    <width>320</width>
     <height>240</height>
    </rect>
   </property>
@@ -24,7 +24,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="margin">
-    <number>20</number>
+    <number>15</number>
    </property>
    <item row="0" column="0">
     <widget class="QLabel" name="labelDescription">
